# microsoft-agent-framework-rust

./: Cargo.toml  README.md
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/agent-evals/: Cargo.toml
crates/agent-evals/src/: lib.rs
crates/agent-memory/: Cargo.toml
crates/agent-memory/src/: lib.rs
crates/agent-models/: Cargo.toml
crates/agent-models/src/: lib.rs
crates/agent-runtime/: Cargo.toml
crates/agent-runtime/src/: lib.rs
crates/agent-runtime/tests/: basic.rs
crates/agent-telemetry/: Cargo.toml
crates/agent-telemetry/src/: lib.rs
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
docs/: scope.md
examples/: Cargo.toml  README.md
examples/src/: common.rs
