[workspace]
members = [
    "crates/agent-core",
    "crates/agent-runtime",
    "crates/agent-tools",
    "crates/agent-models",
    "crates/agent-memory",
    "crates/agent-evals",
    "crates/agent-telemetry",
    "crates/agent-cli",
    "examples",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["trace"] }
prometheus = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rand = "0.8"
chrono = "0.4"
meval = "0.2"
tokio-stream = "0.1"
anyhow = "1"
