[package]
name = "agent-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
tracing = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
rand = { workspace = true }

agent-core = { path = "../crates/agent-core" }
agent-runtime = { path = "../crates/agent-runtime" }
agent-tools = { path = "../crates/agent-tools" }
agent-models = { path = "../crates/agent-models" }
