[package]
name = "agent-evals"
version = "0.1.0"
edition = "2021"
description = "Evaluators for the Microsoft Agent Framework in Rust"

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
