[package]
name = "agent-telemetry"
version = "0.1.0"
edition = "2021"
description = "Telemetry utilities for the Microsoft Agent Framework in Rust"

[dependencies]
tracing = { workspace = true }
opentelemetry = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
